force-app/main/default/objects/OrgConfiguration__c/OrgConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to have get some control of the settings like triggers</description>
    <label>Org Configuration</label>
</CustomObject>