force-app/main/default/objects/OrgConfiguration__c/fields/CommunityURL__c.field-meta.xml
<CustomField>
    <fullName>CommunityURL__c</fullName>
    <label>Community URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>