force-app/main/default/objects/OrgConfiguration__c/fields/DigitalFormURL__c.field-meta.xml
<CustomField>
    <fullName>DigitalFormURL__c</fullName>
    <label>Digital Form URL</label>
    <type>Url</type>
</CustomField>