force-app/main/default/objects/OrgConfiguration__c/fields/DisableAccountTriggers__c.field-meta.xml
<CustomField>
    <fullName>DisableAccountTriggers__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Disable Account Triggers</label>
    <type>Checkbox</type>
</CustomField>