force-app/main/default/objects/OrgConfiguration__c/fields/DisableApplicationTriggersForUser__c.field-meta.xml
<CustomField>
    <fullName>DisableApplicationTriggersForUser__c</fullName>
    <description>PacPoint-CL08232022 - Created for case 00023677</description>
    <inlineHelpText>When populated the application triggers will be disabled for the specific username.</inlineHelpText>
    <label>Disable Application Triggers For User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>