force-app/main/default/objects/OrgConfiguration__c/fields/DisableLicenseTriggers__c.field-meta.xml
<CustomField>
    <fullName>DisableLicenseTriggers__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Disable triggers for AssociatedLicenseTrigger and LicenseAll</description>
    <label>Disable License Triggers</label>
    <type>Checkbox</type>
</CustomField>