force-app/main/default/objects/OrgConfiguration__c/fields/DisableTriggers__c.field-meta.xml
<CustomField>
    <fullName>DisableTriggers__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used to activate and deactivate the triggers as follows:
AccountTrigger
PaymentAll
PaymentTrigger&quot;
LicenseAll
InsuranceBondTrigger
AssociatedLicenseTrigger
ApplicationTrigger
ApplicationClassificationsTrigger
ApplicationRequirementTrigger</description>
    <label>Disable Triggers</label>
    <type>Checkbox</type>
</CustomField>