force-app/main/default/objects/OrgConfiguration__c/fields/DocumentGeneratorSize__c.field-meta.xml
<CustomField>
    <fullName>DocumentGeneratorSize__c</fullName>
    <description>Used to specify the notification size of the Document Generator</description>
    <label>Document Generator Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>