force-app/main/default/objects/OrgConfiguration__c/fields/EnableSandboxSync__c.field-meta.xml
<CustomField>
    <fullName>EnableSandboxSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Sandbox Sync</label>
    <type>Checkbox</type>
</CustomField>