force-app/main/default/objects/OrgConfiguration__c/fields/EnableValidations__c.field-meta.xml
<CustomField>
    <fullName>EnableValidations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to skip the validation for the license</description>
    <label>Enable Validations</label>
    <type>Checkbox</type>
</CustomField>