force-app/main/default/objects/OrgConfiguration__c/fields/SkipAppRenewFlow__c.field-meta.xml
<CustomField>
    <fullName>SkipAppRenewFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to skip the Application Renew flow.</description>
    <label>Skip App Renew Flow</label>
    <type>Checkbox</type>
</CustomField>