force-app/main/default/objects/OrgConfiguration__c/fields/Use_Organization_Wide_Email__c.field-meta.xml
<CustomField>
    <fullName>Use_Organization_Wide_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This use in Following area:
Payment Receipt Emails  -

List Builder Payment – apex (from email) invoked by PB - Chris

o  List Builder Docs – Scheduled Batch - Chris

o  Renew Payment - apex  (from email) invoked by PB - Chris

o  New Application Payment - apex

Email to Print – Apex - Chris</description>
    <label>Use Organization-Wide Email</label>
    <type>Checkbox</type>
</CustomField>